--- a/MLR.qmd
+++ b/MLR.qmd
@@ -21,7 +21,7 @@ c)
 
 To conduct LLSR, we need to satisfy LINE assumptions. Specifically these are the follow assumptions in this context.
 
-1.  The mean number of cricket chirps per minute is linearly related bto temperature.
+1.  The mean number of cricket chirps per minute is linearly related to temperature.
 
 2.  Observations are independent. Specifically, the number of cricket chirps is not correlated with previous number of cricket chirps of future number of cricket chirps.
 
@@ -85,16 +85,20 @@ houses <- read_csv("kingCountyHouses.csv")
 a\)
 
 ```{r}
-lm(price ~ sqft, houses)
+lm(price ~ sqft, houses) |>
+  tidy() |>
+  kable(digits = 3)
 ```
 
 For each 100 square foot increase, houses prices in King County, Washington are expected to increase by \$28,060 dollars.
 
 ```{r}
-lm(log(price)~sqft, houses)
+lm(log(price)~sqft, houses) |>
+  tidy()|>
+  kable(digits = 3)
 ```
 
-When square foot increases by 100, log price is expected to increase by \$3.097\*10\^-2\$
+When square foot increases by 100, log price is expected to increase by $3.987*10^{-2}$.
 
 c\)
 
@@ -123,7 +127,9 @@ The price is expected to change by a multiplicative factor of 1.040675 when sqft
 d\)
 
 ```{r}
-lm(price ~ log(sqft), houses)
+lm(price ~ log(sqft), houses) |>
+  tidy() |>
+  kable(digits = 3)
 ```
 
 $\hat{y_2} = \hat{\beta_0} + \hat{\beta_1}*{log(sqft_2)}$
@@ -147,10 +153,10 @@ $$\hat{y_2} - \hat{y_1} = \hat{\beta_1} * log(\frac{1.1*sqft_1}{sqft_1})$$
 $$\hat{y_2} - \hat{y_1} = \hat{\beta_1} * log(1.1)$$
 
 ```{r}
-528647 * log(1.1)
+528647.5 * log(1.1)
 ```
 
-The price is expected to increase by \$50,385.44 when sqft increases by 10%.
+The price is expected to increase by \$50,385.49 when sqft increases by 10%.
 
 ## Exercise 5
 
@@ -162,7 +168,10 @@ a\)
 
 ```{r}
 ggplot(college, aes(early_career_pay))+
-  geom_histogram()
+  geom_histogram() +
+  labs(x = "Early Career Pay (in dollars)",
+       y = "Count",
+       title = "Early Career Pay at Observed Schools")
 ```
 
 The plot appears to follow a bell curve shape like in a normal distribution. The most frequent early_career_pay values are slightly below 50k.
@@ -171,14 +180,22 @@ b\)
 
 ```{r}
 ggplot(college, aes(type, early_career_pay)) +
-geom_boxplot()
+geom_boxplot() +
+  labs(x = "Type of School",
+       y = "Early Career Pay (in dollars)",
+       title = "Distribution of Early Career Pay (in dollars)")
 ```
 
 It preliminarily appears that the private schools have a slightly higher early_career pay.
 
 ```{r}
 ggplot(college, aes(stem_percent, early_career_pay)) +
-geom_point()
+geom_point() +
+  labs(
+    x = "Percent Studying Stem at School", 
+    y = "Early Career Pay (in dollars)",
+    title = "Early Career Pay vs. Percent Studying Stem"
+  )
 ```
 
 As a school's stem_percent increase, it seems their early_career pay value increases.
@@ -186,7 +203,8 @@ As a school's stem_percent increase, it seems their early_career pay value incre
 c\)
 
 ```{r}
-lm(early_career_pay ~ out_of_state_total + type + stem_percent + type * stem_percent, college) |>
+lm(early_career_pay ~ out_of_state_total + type + stem_percent
+   + type * stem_percent, college) |>
   tidy(conf.int = TRUE) |>
   kable(digits = 3)
 ```
@@ -205,9 +223,7 @@ dof = n - p - 1
 
 There are `{r} dof` degrees of freedom in the estimate of the regression standard error $\sigma$.
 
-
-`{r} nrow(colleges)`
-e\)
+e)  
 
 The 95% CI for amount in which intercept is higher for public institutions is between -324.813 and 2694.853.
 
