--- a/HW3.qmd
+++ b/HW3.qmd
@@ -102,7 +102,7 @@ df |>
 ### Exercise 4
 
 | Game | First Five Shots | Likelihood (No Hot Hand)                              | Likelihood (Hot Hand)                                                                      |
-|------|------------------|-------------------------------------------------------|--------------------------------------------------------------------------------------------|
+|------------------|------------------|------------------|------------------|
 | 1    | BMMBB            | $(p_b)^3(1-p_b)^2$                                    | $$p_b(p_{b|b})(1-p_{b|b})(1-p_b)$$                                                         |
 | 2    | MBMBM            | $$                                                    
                                                       (p_b)^2(1-p_b)^3            
@@ -131,13 +131,18 @@ b\)
 
 c\)
 
+We specify the likelihood of model 1, the no hot hand model.
+
 $$
 Lik(p_b) = p_b^{10}(1-p_b)^{15}
 $$
 
+We can find the value of $p_b$ for which the log likelihood is maximized which will be the same value for which log is maximized due to monotonicity of the log function. 
+
 $$
 log(Lik(p_b))) = 10log(p_b)+15log(1-p_b)
 $$
+Differentiating will serve as our means of finding extrema under the assumption that the rate of change is 0 at extrema. 
 
 $$
 \frac{\partial}{\partial p_b} log (Lik(p_b)) = \frac{10}{p_b} - \frac{15}{1-p_b} = 0
@@ -150,10 +155,14 @@ $$
 $$
 \hat{p_b}_{MLE} = 2/5
 $$
+We check the second derivative with respect to $p_b$ to ensure the estimate is, in fact, a maximum. 
 
 $$
 \frac{\partial^2}{\partial p_b^2} log(Lik(p_b)) = \frac{-10}{p_b^2}-\frac{15}{(1-p_b)^2} < 0 
-$$ so we know our $\hat{p_b}$ value is a maximum.
+$$ 
+
+
+so we know our $\hat{p_b}$ value is a maximum.
 
 Model 2: Hot Hand Model
 
@@ -163,17 +172,25 @@ $$
 
 $$
 log \ Lik(p_b, p_{b|b}) = 7*log(p_b)+11log(1-p_b)+3log(p_{b|b})+4log(1-p_{b|b})
-$$ $$
+$$ 
+
+We check the second derivative with respect to each parameter to ensure the estimates are, in fact, maxima.  
+
+$$
 \frac{\partial}{\partial p_{b}} log(Lik(p_b, p_{b|b})) = \frac{7}{p_b} - \frac{11}{1-p_b} = 0
-$$ $$
+$$ 
+$$
 \frac{7}{p_b} = \frac{11}{1-p_b}
 $$
 
 $$
 \hat{p_b}_{MLE} = \frac{7}{18}
-$$ $$
+$$ 
+
+$$
 \frac{\partial^2}{\partial p_b^2} = \frac{-7}{p_b^2}-\frac{11}{(1-p_b)^2} <0 
-$$ so our $\hat{p_b}$ is a maximum.
+$$ 
+so our $\hat{p_b}$ is a maximum.
 
 $$
 \frac{\partial}{\partial p_{b|b}} log(Lik(p_b, p_{b|b})) = \frac{3}{p_{b|b}} - \frac{4}{1-p_{b|b}}
@@ -189,7 +206,9 @@ $$
 
 $$
 \frac{\partial^2}{\partial p_{b|b}^2} = \frac{-3}{p_{b|b}} - \frac{4}{(1-p_{b|b})^2} <0
-$$ so this $\hat{p_{b|b}}$ is a maximum.
+$$ 
+
+so this $\hat{p_{b|b}}$ is a maximum.
 
 ```{r}
 logLik1<- function(pb){
